add section carousel with slider

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-<div class="promo">
+<section class="promo">
     <div class="container">
         <header class="header">
             <a href="#" class="header__logo"><img src="icons/logo.png" alt="logo"></a>
@@ -53,9 +54,9 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 
-<div class="benefits">
+<section class="benefits">
     <div class="container">
         <div class="header-box header-box_bold">
             НАШИ ПРЕИМУЩЕСТВА
@@ -86,9 +87,9 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 
-<div class="consultation">
+<section class="consultation">
     <div class="container">
         <div class="header-box header-box_left">Получите бесплатную консультацию<br>по подбору пульсометра</div>
         <div class="consultation__text">
@@ -104,6 +105,22 @@
             </button>
         </form>
     </div>
-</div>
+</section>
+
+<section class="carousel">
+    <div class="container">
+        <div class="carousel__inner">
+            <div><img src="img/slide_1.png" alt="slide_1"></div>
+            <div><img src="img/slide_2.png" alt="slide_2"></div>
+            <div><img src="img/slide_3.png" alt="slide_3"></div>
+        </div>
+    </div>
+</section>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
