--- a/index.html
+++ b/index.html
@@ -117,10 +117,48 @@
     </div>
 </section>
 
+<section class="products">
+    <div class="container">
+        <div class="header-box  header-box_thin">Каталог пульсометров</div>
+        <ul class="products__choice">
+            <li class="products__choice-item products__choice-item_active">
+                <div>Для фитнеса</div>
+            </li>
+            <li class="products__choice-item">
+                <div>для бега</div>
+            </li>
+            <li class="products__choice-item">
+                <div>для триатлона</div>
+            </li>
+        </ul>
+
+        <div class="catalog">
+            <div class="catalog__item">
+                <img class="catalog__img" src="img/product.png" alt="">
+                <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                <hr>
+                <div class="catalog__footer">
+                    <div>
+                        <div class="catalog__old-price">4 750 руб.</div>
+                        <div class="catalog__price">4 500 руб.</div>
+                    </div>
+                    <button class="button button_cat">КУПИТЬ</button>
+                </div>
+            </div>
+            <div class="catalog__item"></div>
+            <div class="catalog__item"></div>
+            <div class="catalog__item"></div>
+            <div class="catalog__item"></div>
+            <div class="catalog__item"></div>
+        </div>
+    </div>
+</section>
+
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
 <script src="js/script.js"></script>
-
 </body>
 </html>
