--- a/index.html
+++ b/index.html
@@ -133,25 +133,237 @@
         </ul>
 
         <div class="catalog">
-            <div class="catalog__item">
-                <img class="catalog__img" src="img/product.png" alt="">
-                <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-                <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
-                <hr>
-                <div class="catalog__footer">
-                    <div>
-                        <div class="catalog__old-price">4 750 руб.</div>
-                        <div class="catalog__price">4 500 руб.</div>
+            <div class="catalog__con catalog__con_active">
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
                     </div>
-                    <button class="button button_cat">КУПИТЬ</button>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
                 </div>
             </div>
-            <div class="catalog__item"></div>
-            <div class="catalog__item"></div>
-            <div class="catalog__item"></div>
-            <div class="catalog__item"></div>
-            <div class="catalog__item"></div>
+            <div class="catalog__con">
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__con">
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
