--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -164,7 +165,8 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -189,7 +191,8 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -214,7 +217,8 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -239,7 +243,8 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -264,34 +269,8 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
-                        </div>
-                        <ul class="catalog__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-                            <a href="#" class="catalog__back">назад</a>
-                        </ul>
-                    </div>
-                    <hr>
-                    <div class="catalog__footer">
-                        <div>
-                            <div class="catalog__old-price">4 750 руб.</div>
-                            <div class="catalog__price">4 500 руб.</div>
-                        </div>
-                        <button class="button button_cat">КУПИТЬ</button>
-                    </div>
-                </div>
-            </div>
-            <div class="catalog__con">
-                <div class="catalog__item">
-                    <div class="catalog__item-wrapper">
-                        <div class="catalog__content catalog__content_active">
-                            <img class="catalog__img" src="img/product.png" alt="">
-                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -318,7 +297,36 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog__list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div>
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_cat">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__con">
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__content catalog__content_active">
+                            <img class="catalog__img" src="img/product.png" alt="">
+                            <div class="catalog__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -343,7 +351,8 @@
                         <div class="catalog__content catalog__content_active">
                             <img class="catalog__img" src="img/product.png" alt="">
                             <div class="catalog__subheader">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <div class="catalog__descr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
                             <a href="" class="catalog__link">ПОДРОБНЕЕ</a>
                         </div>
                         <ul class="catalog__list">
@@ -365,6 +374,53 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+
+<section class="reviews">
+    <div class="container">
+        <div class="header-box header-box_bold">
+            отзывы клиентов
+        </div>
+        <div class="reviews__item">
+            <img src="img/review_1.png" alt="review_1" class="reviews__img">
+            <div class="reviews__text">
+                <div class="reviews__name">Ирина Иванченко</div>
+                <div class="reviews__sub">2 полумарафона</div>
+                <div class="reviews__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали
+                    пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>Через некоторое время
+                    решила обновить гаджет - не раздумывая обратилась туда же.<br><br>Новые цели - новый гаджет!<br><br>
+                    Спасибо, RunSmart!
+                </div>
+            </div>
+        </div>
+        <div class="reviews__item">
+            <img src="img/review_2.png" alt="review_1" class="reviews__img">
+            <div class="reviews__text">
+                <div class="reviews__name">Иван Сёмочкин</div>
+                <div class="reviews__sub">1 полумарафон</div>
+                <div class="reviews__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе
+                    делал.<br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую
+                    тренировку,
+                    научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на
+                    месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!
+                </div>
+            </div>
+        </div>
+        <div class="reviews__item">
+            <img src="img/review_3.png" alt="review_3" class="reviews__img">
+            <div class="reviews__text">
+                <div class="reviews__name">Юлия Дашкина</div>
+                <div class="reviews__sub">2 полумарафона</div>
+                <div class="reviews__descr">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но
+                    становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила
+                    попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант
+                    со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более
+                    коротких забегов и не намерена останавливаться!<br><br>Спасибо!!!
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 
