--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
                 <div class="reviews__sub">2 полумарафона</div>
                 <div class="reviews__descr">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но
                     становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила
-                    попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант
+                    попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный
+                    вариант
                     со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более
                     коротких забегов и не намерена останавливаться!<br><br>Спасибо!!!
                 </div>
@@ -424,6 +425,19 @@
     </div>
 </section>
 
+<footer class="footer">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1737.0267448501186!2d37.64624047364648!3d55.76831563990905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1559894689029!5m2!1sru!2sua" width="100%" height="630" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    <div class="footer__info">
+        <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+        <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+        <div class="footer__social">
+            <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
+            <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
+            <a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></a>
+        </div>
+    </div>
+</footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
